# csse3010-tools

./: .gitignore  flake.nix  latest_commits.json  pyproject.toml  test.yaml
criteria/: 2025-s1.yaml  2025-s2.yaml  pf.yaml  s0.json  s0.yaml  s1.yaml
csse3010_tools/: appstate.py  criteria.py  gitea_api.py  hashes.py  main.py  rubric.py  s1.json  state.py  style.tcss
csse3010_tools/ui/: banner.py  build_menu.py  commit_hash_select.py  criteria_select.py  git_select.py  mark_panel.py  mark_panel_raw.py  saveload.py  student_select.py
